--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,15 @@ verbadge <- sprintf('<a href="https://img.shields.io/badge/Version-%s-orange.svg
 
 <img src="inst/lexicon_logo/r_lexicon.png" width="135" alt="lexicon Logo">  
 
-**lexicon** is a collection of lexical hash tables, dictionaries, and word lists.
+**lexicon** is a collection of lexical hash tables, dictionaries, and word lists.  The data prefixes help to categorize the data types:
+
+Prefix        | Meaning
+------------- | -------------
+`hash_`       | A `data.frame` with a lookup and return value
+`key_`        | A keyed `data.table` hash table
+`pos_`        | A part of speech `vector`
+`sw_`         | A stopword `vector`
+
 
 # Data
 
