--- a/README.Rmd
+++ b/README.Rmd
@@ -24,8 +24,9 @@ verbadge <- sprintf('<a href="https://img.shields.io/badge/Version-%s-orange.svg
 
 Prefix        | Meaning
 ------------- | -------------
-`key_`       | A `data.frame` with a lookup and return value
-`hash_`        | A keyed `data.table` hash table
+`key_`        | A `data.frame` with a lookup and return value
+`hash_`       | A keyed `data.table` hash table
+`freq_`       | A `data.table` of terms with frequencies
 `pos_`        | A part of speech `vector`
 `sw_`         | A stopword `vector`
 
