--- a/NEWS
+++ b/NEWS
@@ -17,6 +17,20 @@ And constructed with the following guidelines:
 * Bug fixes and misc changes bumps the patch
 
 
+lexicon 0.1.0 -
+----------------------------------------------------------------
+
+BUG FIXES
+
+NEW FEATURES
+
+MINOR FEATURES
+
+IMPROVEMENTS
+
+CHANGES
+
+
 lexicon 0.0.1
 ----------------------------------------------------------------
 
