--- a/NEWS
+++ b/NEWS
@@ -24,6 +24,7 @@ NEW FEATURES
 
 * `hash_grady_pos` added to provide a lookup of Grady's parts of speech for words.
 
+* `hash_lemmas` added to provide a lookup of Mechura's lemmatization list.
 
 lexicon 0.1.0
 ----------------------------------------------------------------
