upped version afer cran accept

--- a/NEWS
+++ b/NEWS
@@ -17,6 +17,14 @@ And constructed with the following guidelines:
 * Bug fixes and misc changes bumps the patch
 
 
+lexicon 0.2.0 -
+----------------------------------------------------------------
+
+NEW FEATURES
+
+
+
+
 lexicon 0.1.1
 ----------------------------------------------------------------
 
