--- a/README.Rmd
+++ b/README.Rmd
@@ -43,6 +43,9 @@ Prefix        | Meaning
 ```{r, echo=FALSE}
 pacman::p_load(pander)
 dat <- pacman::p_data(lexicon)
+data.frame(Data = pacman::p_funs(lexicon),
+    Description = c('Jockers Sentiment Polarity Table', 'Jockers Sentiment Data Set')
+)
 dat[[1]] <- paste0('`',dat[[1]], '`')
 pander::set.alignment('left')
 pander(dat, style = "grid")
