--- a/README.Rmd
+++ b/README.Rmd
@@ -42,11 +42,16 @@ Prefix        | Meaning
 
 ```{r, echo=FALSE}
 pacman::p_load(pander)
-dat <- pacman::p_data(lexicon)
-data.frame(Data = pacman::p_funs(lexicon),
-    Description = c('Jockers Sentiment Polarity Table', 'Jockers Sentiment Data Set')
-)
+dat <- rbind.data.frame(pacman::p_data(lexicon),
+data.frame(
+    Data = pacman::p_funs(lexicon),
+    Description = c('Jockers Sentiment Polarity Table', 'Jockers Sentiment Data Set'), 
+    stringsAsFactors = FALSE
+))
+dat <- dat[order(dat$Data),]
+
 dat[[1]] <- paste0('`',dat[[1]], '`')
+row.names(dat) <- NULL
 pander::set.alignment('left')
 pander(dat, style = "grid")
 
