--- a/NEWS
+++ b/NEWS
@@ -17,6 +17,22 @@ And constructed with the following guidelines:
 * Bug fixes and misc changes bumps the patch
 
 
+
+lexicon 0.5.0 -
+----------------------------------------------------------------
+
+BUG FIXES
+
+NEW FEATURES
+
+MINOR FEATURES
+
+IMPROVEMENTS
+
+CHANGES
+
+
+
 lexicon 0.4.0 - 0.4.1
 ----------------------------------------------------------------
 
