*  The word "incredibly" was removed from `hash_sentiment_jockers` and added as   an amplifier to `hash_valence_shifters`.  Spotted by AbdulMajedRaja:   https://github.com/trinker/sentimentr/issues/58#issuecomment-343373693

--- a/NEWS
+++ b/NEWS
@@ -31,6 +31,10 @@ IMPROVEMENTS
 
 CHANGES
 
+*  The word "incredibly" was removed from `hash_sentiment_jockers` and added as
+  an amplifier to `hash_valence_shifters`.  Spotted by AbdulMajedRaja:
+  https://github.com/trinker/sentimentr/issues/58#issuecomment-343373693
+
 
 
 lexicon 0.4.0 - 0.4.1
