--- a/README.Rmd
+++ b/README.Rmd
@@ -35,7 +35,7 @@ Prefix        | Meaning
 `key_`        | A `data.frame` with a lookup and return value
 `hash_`       | A keyed `data.table` hash table
 `freq_`       | A `data.table` of terms with frequencies
-`profanity`   | A profane words `vector` 
+`profanity_`  | A profane words `vector` 
 `pos_`        | A part of speech `vector`
 `pos_df_`     | A part of speech `data.frame`
 `sw_`         | A stopword `vector`
