* `hash_emojis` and `emojis_sentiment` data sets added for text analysis with   emojis.

--- a/NEWS
+++ b/NEWS
@@ -29,14 +29,18 @@ NEW FEATURES
   & `sw_loughran_mcdonald_long` stopword lists added.
 
 * `hash_sentiment_senticnet` `hash_sentiment_vadar`, `hash_sentiment_inquirer`,
-  `hash_sentiment_loughran_mcdonald`, & `hash_sentiment_jockers_rinker`
-  sentiment hash tables added for use in the **sentimentr** package.
+  `hash_sentiment_loughran_mcdonald`, `hash_sentiment_emojis` &
+  `hash_sentiment_jockers_rinker` sentiment hash tables added for use in the
+  **sentimentr** package.
 
 * `modal_loughran_mcdonald` added; a data.table of wea, moderate, and strong
   modal verbs.
 
 * `constraining_loughran_mcdonald` added, a vector of words that are associated
   with constraining.
+
+* `hash_emojis` and `emojis_sentiment` data sets added for text analysis with
+  emojis.
 
 
 MINOR FEATURES
