--- a/NEWS
+++ b/NEWS
@@ -18,7 +18,7 @@ And constructed with the following guidelines:
 
 
 
-lexicon 0.5.0 -
+lexicon 0.5.0 - 0.6.3
 ----------------------------------------------------------------
 
 BUG FIXES
