* `profanity_zac_anger` added to provide a longer list of profane words.  close #22

--- a/NEWS
+++ b/NEWS
@@ -24,6 +24,8 @@ BUG FIXES
 
 NEW FEATURES
 
+* `profanity_zac_anger` added to provide a longer list of profane words.
+
 MINOR FEATURES
 
 IMPROVEMENTS
