* `available_data` picks up a `regex` argument to search for specific substrings   and return matching rows.  close #21

--- a/NEWS
+++ b/NEWS
@@ -28,6 +28,9 @@ NEW FEATURES
 
 MINOR FEATURES
 
+* `available_data` picks up a `regex` argument to search for specific substrings
+  and return matching rows.
+
 IMPROVEMENTS
 
 CHANGES
