* `hash_lemmas` had the lemma of `as` to be `a`.  This was incorrect (spotted by   Jonathan Bratt).
* `hash_lemmas` had Spaces before 2 tokens (" furtherst", " skilled") meaning.
  This extra white space has been stripped.

close #27

--- a/NEWS
+++ b/NEWS
@@ -26,7 +26,7 @@ BUG FIXES
   Jonathan Bratt).
   
 * `hash_lemmas` had Spaces before 2 tokens (" furtherst", " skilled") meaning.  
-  This axtra white space has been stripped.
+  This extra white space has been stripped.
 
 NEW FEATURES
 
