--- a/NEWS
+++ b/NEWS
@@ -24,7 +24,7 @@ lexicon 1.2.0 -
 
 BUG FIXES
 
-* `hash_emoticons` had '3' as 'laighing' when it should have been '=3'.  This
+* `hash_emoticons` had '3' as 'laughing' when it should have been '=3'.  This
   has been corrected.
 
 NEW FEATURES
