--- a/NEWS
+++ b/NEWS
@@ -25,6 +25,9 @@ lexicon 1.3.0 -
 
 BUG FIXES
 
+* `freq_first_names` cantained a missing (`NA`) value that has been removed.  
+  Spotted thanks to Martin Cadek; see issue #34.
+
 NEW FEATURES
 
 MINOR FEATURES
